2008-08-12  Martyn Russell  <martyn@imendio.com>

	* src/tracker-utils/tracker-query.c:
	* src/tracker-utils/tracker-search.c:
	* src/tracker-utils/tracker-unique.c: Fixed a memory leak.

	* src/tracker-utils/tracker-stats.c: Clean up.
	
2008-08-12  Martyn Russell  <martyn@imendio.com>

	* src/tracker-utils/tracker-files.c:
	* src/tracker-utils/tracker-meta-folder.c:
	* src/tracker-utils/tracker-query.c:
	* src/tracker-utils/tracker-search.c:
	* src/tracker-utils/tracker-stats.c:
	* src/tracker-utils/tracker-status.c:
	* src/tracker-utils/tracker-tag.c: Fix the tracker.h include to
	omit the "src/" part since we set up the include path in the
	CFLAGS. 

	* src/tracker-utils/tracker-unique.c: Clean up.

2008-08-12  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-utils/tracker-files.c:
	* src/tracker-utils/tracker-meta-folder.c:
	* src/tracker-utils/tracker-query.c:
	* src/tracker-utils/tracker-search.c:
	* src/tracker-utils/tracker-stats.c:
	* src/tracker-utils/tracker-status.c:
	* src/tracker-utils/tracker-tag.c: Include correctly tracker.h.

2008-08-12  Martyn Russell  <martyn@imendio.com>

	* src/tracker-utils/Makefile.am: Added.
	
	* src/tracker-utils/tracker-files.c: 
	* src/tracker-utils/tracker-query.c: 
	* src/tracker-utils/tracker-search.c:
	* src/tracker-utils/tracker-status.c: Clean up these examples.
	More importantly make it show the help if the wrong parameters are
	used or none at all.  

2008-08-12  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-indexer/tracker-indexer.c: Added differential
	indexing of text contents when a file is updated.
	
2008-08-12  Ivan Frade  <ivan.frade@nokia.com>

	* tests/libtracker-db/Makefile.am: Commented out some tests that
	need to run with an script. This fixes make distcheck.
	
2008-08-12  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-indexer.c (indexer_update_word): Behave
	nicely with 1-2 elements arrays. Use the correct array index when
	doing operations on the element at hand.
